feat: configure H2 database for development and update project documentation